# Interprocess-Communication-Advanced

./: CMakeLists.txt  INFORME.md  README.md  cJSON.c  client_inet4.c  client_inet6.c  client_unix.c  functs.c  server.c  server_inet4.c  server_inet6.c  server_unix.c
include/: client_inet4.h  client_inet6.h  client_unix.h  functs.h  server_inet4.h  server_inet6.h  server_unix.h
